# aisocialz-platform

./: .gitignore  conftest.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/cockpit/: next.config.ts  package-lock.json  package.json
apps/cockpit/src/app/: layout.tsx  page.tsx
apps/cockpit/src/app/approvals/: page.tsx
apps/cockpit/src/app/chat/: page.tsx
apps/cockpit/src/app/cost/: page.tsx
apps/cockpit/src/app/media/: page.tsx
apps/cockpit/src/app/schedule/: page.tsx
apps/cockpit/src/app/teams/: page.tsx
apps/cockpit/src/app/templates/: page.tsx
apps/cockpit/src/lib/: api.ts
docs/: INVENTARIO.md
docs/fundacao/: 00-visao-e-modelo-operacional.md  01-arquitetura-gcp.md  02-schemas-de-dados.md  03-contratos-dos-agentes.md  04-brand-profiles.md  05-finops-e-controle-de-custos.md  06-instrucoes-para-ia-construtora.md  07-render-e-template-studio.md  08-comunidade-crise-guardrails.md  09-modelo-de-produto.md  10-formatos-templates-acervo.md  11-arquitetura-detalhada.md  README.md
infra/: apis.tf  budget.tf  firestore.tf  iam.tf  main.tf  plan.tfplan  topics.tf  variables.tf  variables.tfvars.example
migrations/: 001_seed_tenant_and_brands.py  002_seed_format_catalog.py
scripts/: demo_ciclo_sandbox.py
services/agents/: pyproject.toml
services/agents/src/agents/: __init__.py  analista.py  base.py  comunidade.py  curador.py  diretor.py  estrategista.py  radar.py  redator.py  revisor.py
services/cockpit_api/: pyproject.toml
services/cockpit_api/src/cockpit_api/: __init__.py  main.py
services/cockpit_api/src/cockpit_api/routers/: connections.py  onboarding.py  voice.py
services/cost_guardian/: pyproject.toml
services/cost_guardian/src/cost_guardian/: __init__.py
services/publisher/: pyproject.toml
services/publisher/src/publisher/: __init__.py
services/render/: pyproject.toml
services/render/src/render/: __init__.py  main.py
templates/_base/card/: manifest.json  sample_data.json  template.html
templates/_base/carrossel/: manifest.json  sample_data.json  template.html
tests/architecture/: test_dependency_contracts.py
tests/integration/: mock_firestore.py  test_ciclo_sandbox.py
