[project]
name = "svc-agents"
version = "0.1.0"
description = "Serviço dos agentes ADK — todos os agentes co-localizados"
requires-python = ">=3.12"
dependencies = [
    "core-domain",
    "llm-gateway",
    "persistence",
    "observability",
    "render-client",
    "google-adk>=0.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.uv.sources]
core-domain = { workspace = true }
llm-gateway = { workspace = true }
persistence = { workspace = true }
observability = { workspace = true }
render-client = { workspace = true }
