[project]
name = "svc-cockpit-api"
version = "0.1.0"
description = "BFF do cockpit Next.js — fronteira HTTP/JSON"
requires-python = ">=3.12"
dependencies = [
    "core-domain",
    "persistence",
    "llm-gateway",
    "observability",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cockpit_api"]

[tool.uv.sources]
core-domain = { workspace = true }
persistence = { workspace = true }
llm-gateway = { workspace = true }
observability = { workspace = true }
