[project]
name = "svc-cost-guardian"
version = "0.1.0"
description = "Guardião de custos — código determinístico, sem LLM"
requires-python = ">=3.12"
dependencies = [
    "core-domain",
    "persistence",
    "observability",
    "google-cloud-pubsub>=2.21",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cost_guardian"]

[tool.uv.sources]
core-domain = { workspace = true }
persistence = { workspace = true }
observability = { workspace = true }
