[project]
name = "svc-publisher"
version = "0.1.0"
description = "Serviço publicador — orquestra adapters com idempotência"
requires-python = ">=3.12"
dependencies = [
    "core-domain",
    "adapters",
    "persistence",
    "observability",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/publisher"]

[tool.uv.sources]
core-domain = { workspace = true }
adapters = { workspace = true }
persistence = { workspace = true }
observability = { workspace = true }
