[project]
name = "svc-render"
version = "0.1.0"
description = "Serviço de render — Puppeteer/FFmpeg/Remotion"
requires-python = ">=3.12"
dependencies = [
    "core-domain",
    "persistence",
    "observability",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "google-cloud-storage>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/render"]

[tool.uv.sources]
core-domain = { workspace = true }
persistence = { workspace = true }
observability = { workspace = true }
